# ALT-Text-Tool

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
alttext/: __init__.py  cli.py  config.py  image_utils.py  metadata.py  people.py  review.py  vision.py
scripts/: smoke_test.py
tests/: test_cli.py  test_image_utils.py  test_metadata.py  test_people.py  test_review.py  test_vision.py
