[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alttext"
version = "0.1.0"
description = "BITV-konforme Alt-Text-Generierung mit lokalem Ollama-Vision-Modell."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "ollama>=0.4.0",
  "Pillow>=10.0.0",
  "PyExifTool>=0.5.6",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.scripts]
alttext = "alttext.cli:app"

[tool.setuptools.packages.find]
include = ["alttext*"]
exclude = ["tests*"]
